wrong usage of image linking in .md turning it into .mdx

--- a/pages/posts/semiconductor.mdx
+++ b/pages/posts/semiconductor.mdx
@@ -12,8 +12,16 @@ Ever wondered how the tiny chips that power everything from your smartphone to y
 
 ### Unit Processing Steps in Semiconductor Manufacturing
 
+import Image from 'next/image'
+
 1. **Thermal Oxidation**
-    ![Thermal Oxidation](/public/images/thermaloxidation.png)
+     <Image
+        src="/public/images/thermaloxidation.png"
+        alt="Thermal Oxidation"
+        width={1125}
+        height={750}
+        priority
+      />
    - First up, we have thermal oxidation, where the surface of the silicon wafer is oxidized to form silicon dioxide. This creates a protective layer that also serves as an insulator. Think of it as the chip's first line of defense against the outside world.
 
 2. **Diffusion**
