--- a/pages/posts/semiconductor.mdx
+++ b/pages/posts/semiconductor.mdx
@@ -25,28 +25,70 @@ import Image from 'next/image'
    - First up, we have thermal oxidation, where the surface of the silicon wafer is oxidized to form silicon dioxide. This creates a protective layer that also serves as an insulator. Think of it as the chip's first line of defense against the outside world.
 
 2. **Diffusion**
-    ![Diffusion](/public/images/diffusion.png)
+      <Image
+        src="/images/diffusion.png"
+        alt="Diffusion"
+        width={1125}
+        height={750}
+        priority
+    />
    - Next, we introduce specific impurities into the silicon wafer through a process called diffusion. This step strategically alters the electrical properties of the semiconductor, which is crucial for creating different components on the chip.
 
 3. **Ion Implantation**
-    ![Ion Implantation](/public/images/ionimp.png)
+    <Image
+        src="/images/ionimp.png"
+        alt="Ion Implantation"
+        width={1125}
+        height={750}
+        priority
+    />
    - For more precise placement of these impurities, ion implantation is used. This involves bombarding the semiconductor with ions at high energy, allowing for tight control over the depth and concentration of the doping. It's like precision-targeted treatment for the silicon to enhance its functionality.
 
 4. **Chemical Vapor Deposition (CVD)**
-    ![Chemical Vapor Deposition (CVD)](/public/images/cvd.png)
+    <Image
+        src="/images/cvd.png"
+        alt="Chemical Vapor Deposition"
+        width={1125}
+        height={750}
+        priority
+    />
    - Then comes chemical vapor deposition, where gases react on the wafer’s surface to deposit a thin film needed for various layers of the circuit. This step is vital for building up the multiple layers that make up an IC.
 
 5. **Photolithography**
-    ![Photolithography](/public/images/photolithography.png)
+    <Image
+        src="/images/photolithography.png"
+        alt="Photolithography"
+        width={1125}
+        height={750}
+        priority
+    />
    - Photolithography is where things get really intricate. We use light to transfer a geometric pattern from a photomask to a light-sensitive chemical photoresist on the wafer. It's essentially printing the circuit design onto the wafer, setting the stage for the next steps.
 
 6. **Etching**
-    ![Etching](/public/images/etching1.png)
-    ![Etching](/public/images/etching2.png)
+    <Image
+        src="/images/etching1.png"
+        alt="Etching"
+        width={1125}
+        height={750}
+        priority
+    />
+    <Image
+        src="/images/etching2.png"
+        alt="Etching"
+        width={1125}
+        height={750}
+        priority
+    />
    - After the patterns are set, etching is used to remove parts of the material layers that aren’t protected by the photoresist, creating the desired physical patterns of the circuit. Imagine it as careful sculpting at a microscopic level.
 
 7. **Metallization**
-    ![Metallization](/public/images/metallization.png)
+    <Image
+        src="/images/metallization.png"
+        alt="Metallization"
+        width={1125}
+        height={750}
+        priority
+    />
    - Finally, we have metallization, where metal layers are deposited to form electrical connections between the circuit elements. This step wires everything together, ensuring that electricity can flow through the finished chip.
 
 ### Wrapping It Up
