--- a/pages/posts/swap.mdx
+++ b/pages/posts/swap.mdx
@@ -3,7 +3,7 @@
 title: Understanding Swap Files and Swap Space on Linux
 date: 2024/6/9
 description: short article about what is swapfile and swapspace in linux
-tag: swapfile swapspace linux server ubuntu
+tag: swapfile , swapspace , linux , server , ubuntu
 author: guney
 ---
 
